# typexs-ng

./: .angular-cli.json  .eslintrc.js  .gitignore  .mocharc.js  .nycrc.json  .travis.yml  README.md  WORKSPACE.bazel  angular.json  extra-webpack.config.js  gulpfile.ts  karma.conf.js  package.json  protractor.conf.js  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.prod.json  tsconfig.spec.json  tslint.json
.circleci/: config.yml
archive/: gulpfile.ts
bundles/: package.json
bundles/@typexs-ng/base/: package.json  (+1 more)
bundles/ng-base/: package.json
config/: typexs--server.yml  typexs--worker.yml  typexs.yml
demo/testtask/: Startup.ts  package.json
docker/develop/: docker-compose.yml
docker/testing/: docker-compose.yml
docs/: app_loading.adoc  functional.adoc  home.adoc  issues.adoc  module_base.adoc  module_storage.adoc  notes.adoc  polyfills.adoc  schematics.adoc  tasks.adoc  xsform.adoc  xsschema.adoc
docs/modules/: admin.adoc
e2e/: app.e2e-spec.ts
src/: Activator.ts  browser.ts  index.ts  public_api.ts  types.ts  typexs-ng-base.metadata.json
src/app/: icons-pct.css  index.html  main.ts  polyfills.ts  styles.css  styles.scss  stylesheets.ts  test.ts  themes.ts  tsconfig.app.json  tsconfig.spec.json
src/commands/: Ng.ts  NgApp.ts  NgBuild.ts
src/decorators/: NgRoute.ts
src/entities/: Page.ts  XsEntity.ts
src/generators/: UpdateToAngularAppGenerator.ts
src/gulp/: ngClean.ts  package.ts  version.ts
src/libs/: Constants.ts  LoDash.ts
tmp/my-project/: README.md
tmp/my-project-mocha/: .angular-cli.json  package.json
(+837 files in other folders)
